# wagtail-starter

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
starter/: wsgi.py
starter/core/: apps.py  models.py
starter/core/migrations/: 0001_initial.py  0002_initial.py
starter/settings/: base.py  dev.py
starter/templates/: base.html
starter/user/: apps.py  models.py
starter/user/migrations/: 0001_initial.py
